--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
             android:background="@drawable/rounded_edittext_register_login"
             android:ems="10"
             android:paddingLeft="16dp"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/email_edittext_login"
             app:layout_constraintStart_toStartOf="@+id/email_edittext_login"
@@ -44,7 +44,7 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
-            android:text="Login"
+            android:text="@string/username"
             android:background="@drawable/rounded_button"
             android:textColor="@android:color/white"
             android:textStyle="bold"
@@ -61,7 +61,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Back to registration"
+            android:text="@string/back_to_registration"
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="bold"
