--- a/app/src/main/res/layout/chat_from_row.xml
+++ b/app/src/main/res/layout/chat_from_row.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/primary"
     android:layout_marginBottom="12dp">
 
     <TextView
@@ -17,6 +18,7 @@
         android:maxWidth="240dp"
         android:background="@drawable/rounded_edittext_register_login"
         android:padding="16dp"
+        android:textColor="@color/secondary_text"
         app:layout_constraintStart_toEndOf="@+id/imageview_chat_from_row"
         app:layout_constraintTop_toTopOf="@+id/imageview_chat_from_row" />
 
