--- a/app/src/main/res/layout/latest_message_row.xml
+++ b/app/src/main/res/layout/latest_message_row.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/primary"
     android:layout_height="120dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -26,7 +27,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         tools:text="Username"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/secondary_text_dark"
         android:textStyle="bold"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/message_textview_latest_message"
