--- a/app/src/main/res/layout/user_row_new_message.xml
+++ b/app/src/main/res/layout/user_row_new_message.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/primary"
     android:layout_height="wrap_content">
 
     <TextView
@@ -16,7 +17,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
         android:text="Username"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/secondary_text_dark"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageview_new_message"
