--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <resources>
     <color name="primary">@color/md_grey_900</color>
-    <color name="primary_dark">@color/md_red_A700</color>
+    <color name="primary_dark">@color/md_black_1000</color>
     <color name="primary_light">@color/md_red_500</color>
     <color name="accent">@color/md_blue_900</color>
-    <color name="primary_text">@color/md_grey_900</color>
-    <color name="secondary_text">@color/md_grey_600</color>
+    <color name="primary_text">@color/md_white_1000</color>
+    <color name="secondary_text">@color/md_black_1000</color>
     <color name="icons">@color/md_white_1000</color>
     <color name="divider">@color/md_grey_400</color>
     <!-- Base application theme. -->
@@ -13,6 +13,9 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
+        <item name="android:textColor">@color/primary_text</item>
     </style>
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
