--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,16 +52,13 @@
             app:layout_constraintStart_toStartOf="@+id/password_edittext_login"
             app:layout_constraintTop_toBottomOf="@+id/password_edittext_login" />
 
-    <TextView
-            android:id="@+id/back_to_register_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="44dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
+    <Button
+            android:id="@+id/register"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
             android:layout_marginTop="8dp"
-            android:text="@string/back_to_registration"
+            android:background="@drawable/rounded_button"
+            android:text="@string/registration"
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="bold"
