--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,7 @@
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:paddingLeft="16dp"
+            android:textColor="@color/secondary_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,6 +36,7 @@
             android:paddingLeft="16dp"
             android:hint="@string/password"
             android:inputType="textPassword"
+            android:textColor="@color/secondary_text"
             app:layout_constraintEnd_toEndOf="@+id/email_edittext_login"
             app:layout_constraintStart_toStartOf="@+id/email_edittext_login"
             app:layout_constraintTop_toBottomOf="@+id/email_edittext_login" />
